model trainer done

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,9 @@ __pycache__/
 # C extensions
 *.so
 
+#vs code
+.vscode/
+
 # Distribution / packaging
 .Python
 build/
@@ -135,7 +138,7 @@ celerybeat.pid
 *.sage.py
 
 # Environments
-.artifacts
+
 .env
 .envrc
 .venv
